--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!Doctype html>
 <html>
-
+adding changes 
 <head>
      <title>HTML Application</title>
 	 <link href="css/site.css" rel="stylesheet">
